tests/baselines/reference/anonymousModules.errors.txt
==== tests/cases/compiler/anonymousModules.ts (7 errors) ====
    module {
           ~
!!! error TS1005: ';' expected.
    ~~~~~~
!!! error TS2095: Could not find symbol 'module'.
        export var foo = 1;
    
        module {
            ~
!!! error TS1005: ';' expected.
     ~~~~~~
!!! error TS2095: Could not find symbol 'module'.
            export var bar = 1;
        }
    
        var bar = 2;
         ~~~~~~~
!!! error TS2192: All declarations of merged declaration 'bar' must be exported or not exported.
    
        module {
            ~
!!! error TS1005: ';' expected.
     ~~~~~~
!!! error TS2095: Could not find symbol 'module'.
            var x = bar;
        }
    }